-Fixed match detail styling causing background colour to stop on mobile screens

--- a/styles/home.css
+++ b/styles/home.css
@@ -161,7 +161,7 @@ input, select, button {
 #matchDetail {
     position: relative;
     width: 100%;
-    height: 100%;
+    background-color: #1e1f33;
     box-sizing: border-box;
     padding: 30px 10px 0 10px;
     animation: opacityHidden 1s ease-out;
